@@ -1443,7 +1443,7 @@ done)]]></screen></para>
     <refentry id="splitdiff">
       <refentryinfo>
 	<productname>patchutils</productname>
-	<date>25 May 2011</date>
+	<date>4 Nov 2014</date>
       </refentryinfo>
 
       <refmeta>
@@ -1461,6 +1461,7 @@ done)]]></screen></para>
 	  <command>splitdiff</command>
 	  <arg choice="opt">-a</arg>
 	  <arg choice="opt">-d</arg>
+	  <arg choice="opt">-D <replaceable>dir</replaceable></arg>
 	  <arg choice="opt">-p <replaceable>n</replaceable></arg>
 	  <arg choice="opt">-E</arg>
 	  <arg choice="opt"><replaceable>file</replaceable></arg>
@@ -1507,6 +1508,16 @@ done)]]></screen></para>
 	      <para>Create file names such as
 	      <filename>a_b.c.patch</filename> for a patch that
 	      modifies <filename>a/b.c</filename>.</para>
+	    </listitem>
+	  </varlistentry>
+
+	  <varlistentry>
+	    <term><option>-D</option>
+	    <replaceable>dir</replaceable></term>
+	    <listitem>
+	      <para>Write output files into subdirectory
+	      <replaceable>dir</replaceable>. Implies
+	      <option>-d</option>.</para>
 	    </listitem>
 	  </varlistentry>
 
