@@ -1,3 +1,12 @@
+2014-11-04  Tim Waugh  <twaugh@redhat.com>
+
+	* splitdiff.in: New -D option, suggested by Ulf Samuelsson.
+	* common.sh: Set path to splitdiff in the test environment.
+	* tests/splitdiffD/run-test: Test splitdiff -D.
+	* Makefile.am: Make sure splitdiff is up to date before
+	running tests. Run splitdiffD test.
+	* doc/patchutils.xml: Updated.
+
 2014-10-17  Tim Waugh  <twaugh@redhat.com>
 
 	* Makefile.am: Run delhunk6 test even though it is expected to
